syntax = "proto3";

package org.mvnsearch.grpc;

option java_multiple_files = true;

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }

  // Sends greetings
  rpc SayHellos (HelloRequest) returns (stream HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
